On prem branch to main merge (#1)
* these are on-prem changes for ec2 instance

* simple commit

* removed scripts

* code for pin login authentication

* new pin auth related chnages

* removed not null

* run scripts changes

* New Pin set code

* check mobile and set pin api fix

* encrypted Id changes

* pin encyp added

* workspace count fix

* consent and privacy document related changes