@@ -11,6 +11,7 @@ import io.jsonwebtoken.JwtException;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -33,6 +34,9 @@ import java.util.Arrays;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Configuration
 public class SecurityConfig {
@@ -79,7 +83,17 @@ public class SecurityConfig {
         http.csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**", "/api/register/**", "/api/registration/**", "/swagger-ui/**", "/v3/api-docs/**", "/api/user/**", "/api/doctor/**", "/api/doctors/**", "/api/notifications/**", "/api/test/**", "/api/medicines/**").permitAll()
+                .requestMatchers("/api/auth/**",
+                        "/api/register/**",
+                        "/api/registration/**",
+                        "/swagger-ui/**",
+                        "/v3/api-docs/**",
+                        "/api/user/**",
+                        "/api/doctor/**",
+                        "/api/doctors/**",
+                        "/api/notifications/**",
+                        "/api/test/**",
+                        "/api/medicines/**").permitAll()
                 .anyRequest().authenticated()
             )
             .httpBasic(Customizer.withDefaults());
@@ -91,9 +105,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // Allow all origins for public APIs
+        configuration.addAllowedOriginPattern("*");
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Total-Count"));
         configuration.setAllowCredentials(false);
         configuration.setMaxAge(3600L);
         
@@ -117,13 +133,17 @@ public class SecurityConfig {
             
             // Skip JWT validation for auth endpoints, registration endpoints, swagger docs, and other public endpoints
             String requestPath = request.getRequestURI();
-            if (requestPath.startsWith("/api/auth/") || 
-                requestPath.startsWith("/api/register/") ||
-                requestPath.startsWith("/api/registration/") ||
-                requestPath.startsWith("/swagger-ui/") || 
-                requestPath.startsWith("/v3/api-docs/") ||
-                requestPath.startsWith("/api/doctors/")) {
-                filterChain.doFilter(request, response);
+            if (
+                    requestPath.startsWith("/api/auth/check-mobile") ||
+                    requestPath.startsWith("/api/auth/register") ||
+                    requestPath.startsWith("/api/auth/login") ||
+                    requestPath.startsWith("/api/auth/") ||
+                    requestPath.startsWith("/api/register/") ||
+                    requestPath.startsWith("/api/registration/") ||
+                    requestPath.startsWith("/swagger-ui/") ||
+                    requestPath.startsWith("/v3/api-docs/") ||
+                    requestPath.startsWith("/api/doctors/")) {
+                    filterChain.doFilter(request, response);
                 return;
             }
             
@@ -141,7 +161,17 @@ public class SecurityConfig {
                     
                     Jws<Claims> claims = jwtUtil.parseToken(token);
                     String sub = claims.getBody().getSubject();
-                    UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(sub, null, Collections.emptyList());
+                    String role = claims.getBody().get("role", String.class);
+                    Map<String, Object> authDetails = new HashMap<>();
+                    authDetails.put("userId", claims.getBody().get("userId"));
+                    authDetails.put("role", role);
+
+                    List<SimpleGrantedAuthority> authorities = role == null
+                            ? Collections.emptyList()
+                            : List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+                    UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(sub, null, authorities);
+                    auth.setDetails(authDetails);
                     SecurityContextHolder.getContext().setAuthentication(auth);
                 } catch (JwtException e) {
                     response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
